--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title:
-description: 这是 PIZn 的又一个博客，它是基于 Jekyll 搭建起来的。不仅仅是用来快速记录工作，学习，生活的一点一滴的地方，更是 PIZn 对 Jekyll 的学习和使用的一次有意义的实践。
+title: iskyi的个人工作博客
+description: 前端没有什么不可以。
 keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, html, javascript, wordpress, logo, design, geek
 ---
 <section class="lotus-logo fn-clear">
@@ -11,7 +11,7 @@ keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
     </hgroup><!-- //violet-site -->
 </section>
 <article class="lotus-article">
-{% for rpost in paginator.posts limit:1 %}
+{% for rpost in paginator.posts limit:5 %}
     <h3><a href="{{ rpost.url }}" title="{{ rpost.title }}" rel="bookmark">{{ rpost.title }}</a></h3>
     <p itemprop="description">{{ rpost.description }}</p>
 {% endfor %}
