--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@ title: iskyi的个人工作博客
 description: 前端没有什么不可以。
 keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, html, javascript, wordpress, logo, design, geek
 ---
+<!--
 <section class="lotus-logo fn-clear">
     <hgroup class="violet-site">
         <h1><a href="{{ site.url }}" >{{ site.title }}</a></h1>
         <h2>{{ site.subTitle }}</h2>
+    </hgroup>
+</section>
+-->
+<section class="lotus-logo fn-clear">
+    <hgroup class="violet-site">
+        <h1>iskyi的个人工作博客</h1>
+        <h2>前端没有什么不可以</h2>
     </hgroup><!-- //violet-site -->
 </section>
 <article class="lotus-article">
