--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, h
 -->
 <section class="lotus-logo fn-clear">
     <hgroup class="violet-site">
-        <h1>iskyi的个人工作博客</h1>
+        <h1>iskyi的博客</h1>
         <h2>前端没有什么不可以</h2>
     </hgroup><!-- //violet-site -->
 </section>
