--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: iskyi的个人工作博客
 description: 前端没有什么不可以。
 keywords: PIZn, GitHub, Jekyll, Plugins, Works, Archives, Quotes, Violet, css, html, javascript, wordpress, logo, design, geek
 ---
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=36892540" charset="UTF-8"></script>
 <!--
 <section class="lotus-logo fn-clear">
     <hgroup class="violet-site">
